<resources>
    <string name="app_name">Gryffindor LMS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>

    <string name="login">Login</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="click_here">Click here to create</string>

    <!-- Strings related to Registration -->
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="dob">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_click">Click here to login</string>
    <string name="verification_code">Your verification code</string>
    <string name="submit">Submit</string>
    <string name="Cpass">Confirm Password</string>


    <!--- Spinners -->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="type">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="forgot_my_pwd">Forgotten your password?</string>
    <string name="search">Search</string>
    <string name="signin">Sign In</string>
    <string name="password">Password</string>
    <string name="keep_me_signin">Keep me signed in</string>
    <string name="no_account">No account?</string>
    <string name="register_now">Register Now</string>
    <string name="signout">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="join_code">Enter Join Code</string>

    <string name="create_new_class">Create New Class</string>




</resources>
