<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etemail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="10dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"
            android:text="@string/login"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>