<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:id="@+id/lin_lay1"
    android:background="@drawable/wood1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/pad_15dp"
            android:paddingTop="@dimen/pad_20dp"
            android:paddingRight="@dimen/pad_15dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/book" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/txt_16sp"
                    android:textColor="@color/white"
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                       android:layout_weight="1"
                    android:text="@string/sign_up" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_16sp"
                    android:text="@string/have_account" />

            </LinearLayout>

            <EditText
                android:id="@+id/etUserReg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:drawableRight="@drawable/ic_username"
                style="@style/editext_normal">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etemailReg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableRight="@drawable/ic_username"
                style="@style/editext_normal">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etdobReg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableRight="@drawable/ic_username"
                style="@style/editext_normal">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etpasswordReg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_5dp"
                android:hint="@string/password"
                android:drawableRight="@drawable/ic_pwd"
                android:inputType="textPassword"
                style="@style/editext_normal" />

            <EditText
                android:id="@+id/etconfirmPasswordReg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_5dp"
                android:hint="@string/Cpass"
                android:drawableRight="@drawable/ic_pwd"
                android:inputType="textPassword"
                style="@style/editext_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    style="@style/spinner_reg"
                    />

                <Spinner
                    android:layout_weight="1"
                    android:id="@+id/spgender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    style="@style/spinner_reg">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    style="@style/spinner_reg"
                    />

                <Spinner
                    android:layout_weight="1"
                    android:id="@+id/sptype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/type"
                    style="@style/spinner_reg">

                </Spinner>
            </LinearLayout>




        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/btnReg"
        android:background="@drawable/reg_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



        <TextView
            android:textSize="@dimen/txt_20sp"
            android:textStyle="bold"
            android:textColor="@color/main_color_gray"
            android:id="@+id/tvRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </LinearLayout>
</LinearLayout>